--- a/src/styles.css
+++ b/src/styles.css
@@ -68,3 +68,48 @@ button.success:hover {
 .mr-8 {
   margin-right: 8px;
 }
+
+h2 {
+  background: rgb(5, 0, 20);
+  text-align: center;
+  width: 100%;
+  max-width: 420px;
+  margin: 0 auto;
+  padding: 16px 0;
+  border-radius: 8px;
+  margin-bottom: 24px;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  width: 100%;
+  max-width: 420px;
+  margin: 0 auto;
+  background: rgb(5, 0, 20);
+  padding: 32px 24px;
+  border-radius: 8px;
+}
+.col {
+  flex-grow: 1;
+  width: 100%;
+}
+hr {
+  margin-bottom: 24px;
+  margin-top: -8px;
+}
+input {
+  width: 100%;
+  display: block;
+  margin: 8px 0;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+}
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
