@output enviar valores al componente padre

--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col">
-    <app-agregar [personajes]="personajes" [nuevo]="nuevo"></app-agregar>
+    <app-agregar (onNuevoPersonaje)="savePersonaje($event)"></app-agregar>
   </div>
 
   <div class="col">
