service to manage info

--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -1,11 +1,11 @@
-<h2>DBZ</h2>
+<h2>Mis Personajes</h2>
 
 <div class="row">
   <div class="col">
-    <app-agregar (onNuevoPersonaje)="savePersonaje($event)"></app-agregar>
+    <app-agregar></app-agregar>
   </div>
 
   <div class="col">
-    <app-personajes [personajes]="personajes"></app-personajes>
+    <app-personajes></app-personajes>
   </div>
 </div>
