--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 
 html,
 body {
-  background: #3e4144;
+  background: #34475a;
   margin: 20px;
   color: #f5f5f5;
   -webkit-font-smoothing: antialiased;
@@ -50,16 +50,19 @@ button:focus {
   outline: none;
 }
 button.danger {
-  background-color: rgb(255, 53, 131);
+  background-color: rgb(255, 53, 63);
 }
 button.danger:hover {
-  background-color: rgb(223, 32, 105);
+  background-color: rgb(223, 32, 54);
 }
 button.success {
   background-color: rgb(53, 255, 130);
 }
 button.success:hover {
   background-color: rgb(36, 224, 108);
+}
+button.delete {
+  padding: 4px 8px;
 }
 
 .p-1 {
@@ -70,7 +73,7 @@ button.success:hover {
 }
 
 h2 {
-  background: rgb(5, 0, 20);
+  background: #080121;
   text-align: center;
   width: 100%;
   max-width: 420px;
@@ -86,7 +89,7 @@ h2 {
   width: 100%;
   max-width: 420px;
   margin: 0 auto;
-  background: rgb(5, 0, 20);
+  background: #080121;
   padding: 32px 24px;
   border-radius: 8px;
 }
@@ -112,4 +115,24 @@ ul {
   display: flex;
   flex-direction: column;
   row-gap: 8px;
+}
+ul li {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+ul li button {
+  margin: 0;
+}
+
+@media screen and (min-width: 1000px) {
+  .row {
+    flex-wrap: nowrap;
+    max-width: 900px;
+    column-gap: 56px;
+  }
+  h2 {
+    max-width: 900px;
+  }
 }
